# rust-axum

./: .gitignore  Cargo.toml  README.md  Session.vim
.cargo/: config.toml
backend/: Cargo.toml
backend/examples/: gen_key.rs  quick_dev.rs
backend/sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/_dev_utils/: dev_db.rs  mod.rs
backend/src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
backend/src/ctx/: mod.rs
backend/src/log/: mod.rs
backend/src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
backend/src/model/store/: error.rs  mod.rs
backend/src/utils/: error.rs  mod.rs
backend/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs
backend/src/web/rpc/: mod.rs  task_rpc.rs
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc/src/: error.rs  lib.rs  params.rs  task_rpc.rs  token_rpc.rs
crates/libs/lib-utils/src/: b64.rs  envs.rs  time.rs
crates/services/web-server/: Cargo.toml
crates/tools/gen-key/: Cargo.toml  gen_key.rs
crates/tools/gen-key/src/: main.rs
examples/: quick_dev.rs
frontend/: index.html
sql/dev_initial/: 01-create-schema.sql
src/: config.rs  ctx.rs  error.rs  log.rs  main.rs
src/ctx/: error.rs
src/log/: mod.rs
src/model/: error.rs  mod.rs  model_controller.rs  model_manager.rs  ticket.rs
src/store/: error.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
tests/: quick_dev.rs
(+37 files in other folders)
