[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.20", features = ["macros"] }
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# Cookies parsing
lazy-regex = "3"
# Ctx extractor
async-trait = "0.1"
# Errors
strum_macros = "0.25"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.7"
